--- a/english.html
+++ b/english.html
@@ -269,8 +269,6 @@ Error message and password prompt
 
 <li>Dandan went</li>
 
-<li>Draft of 'The first assembly'</li>
-
 <li>Dreams that we've dreamt</li>
 
 <li>Elementary</li>
@@ -8212,7 +8210,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Draft of 'The first assembly']] [[Coen Sisters]] [[Christmas dinner]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8503,30 +8501,11 @@ Be good.
  &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
 </div>
 <div created="20200212171338780" modified="20200212171534372" tags="[[Coen sister]] Mothers Houses [[True stories]]" title="Dandan went">
-<pre>
-[img[pictures/dandan-nasa.jpg]]
+<pre>[img[pictures/dandan-nasa.jpg]]
 
 
  &lt;&lt;heblink [[דןדן נסע]]&gt;&gt;
 
-
-
-</pre>
-</div>
-<div created="20200202171450477" draft.of="The first assembly" draft.title="The first assembly" modified="20200212174952109" tags="[[Monkeys with car keys]]" title="Draft of 'The first assembly'">
-<pre>[img[pictures/asefot.jpg]]
-
-!!![[Philippe]]:
-
-Our first assembly was at the [[monometallic Christmas dinner|Christmas dinner]] that took place in December 2015, and since then we see each other all the time. The youngsters actually work together, and I come or show up to family's dinners and such.  
-A week ago (meaning more than a year after that Christmas dinner), it was the first time since then, that Yoyo asked us all to come, and everybody except [[Dandan who went|Dandan went]], came, including [[Iris|Iris the daughter]], the daughter of my beloved Eva. 
-Yoyo stood in front of everybody, and in his wobbly way he asked [[Fa]] to stand close to him and told us how few days ago he insulted Fa, who didn't understand completely the intentions of Yoyo, when they edited the first chapter of his internet porn series.  
-&quot;It happened five days ago, that [[I hurt|Keep on bleeding]] Fa, and I couldn't let it go since. I'm really ashamed because I yelled at him and I was not very nice. On the other hand I'm just a human being, and in the end of the day I've called you here to tell you that all of us are in pain and all of us cause pain, and except for the cool things here in the archive, I think that if we really want to make a difference, we have to tell [[the real stories|True stories]] as they are, and there's nothing to be ashamed of, not even of Gura's rage seizures, and I ask you to write – not in an emotional way- but in an [[imagine|Imagine]] way.
-When he said it I thought about my Ethan, my youngest son, and how complicated are the relations between us, I, the psychiatrist, am [[walking barefoot|I, the psychiatrist]]. 
-
-
-
- &lt;&lt;heblink [[האסיפה הראשונה]]&gt;&gt;
 
 
 </pre>
@@ -8579,8 +8558,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
 </div>
 <div created="20200212172954331" modified="20200212173109594" tags="[[Coen sister]]" title="Fa">
-<pre>
-[img[pictures/fa.jpg]]
+<pre>[img[pictures/fa.jpg]]
 
 
  &lt;&lt;heblink [[פה]]&gt;&gt;
@@ -8602,8 +8580,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 </pre>
 </div>
 <div created="20200212164615918" modified="20200212164757805" tags="Metafiction [[Outer sisters]]" title="Here in the Ghetto">
-<pre>
-[img[pictures/here-in-the-ghetto.jpg]]
+<pre>[img[pictures/here-in-the-ghetto.jpg]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[Here in the Ghetto]]&quot;&gt;&gt;
@@ -8625,8 +8602,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 </pre>
 </div>
 <div created="20200212175008520" modified="20200212175438288" tags="[[True stories]] Children" title="I, the psychiatrist">
-<pre>
-[img[pictures/eytan-sheli.jpg]]
+<pre>[img[pictures/eytan-sheli.jpg]]
 
 
  &lt;&lt;heblink [[אני הפסיכיאטר]]&gt;&gt;
@@ -8635,8 +8611,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 </pre>
 </div>
 <div created="20200212174127022" modified="20200212174834891" tags="Music [[How many songs can you even invent at all]]" title="Imagine">
-<pre>
-[img[pictures/imagine.jpg]]
+<pre>[img[pictures/imagine.jpg]]
 
 !!![[Coen sisters]]:
 
@@ -8652,8 +8627,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 </pre>
 </div>
 <div created="20200212171932372" modified="20200212172435735" tags="[[Coen sister]] Children [[Single parent children]]" title="Iris the daughter">
-<pre>
-[img[pictures/iris-habat.jpg]]
+<pre>[img[pictures/iris-habat.jpg]]
 
 !!![[Gura]]:
 
@@ -8680,8 +8654,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200212173527645" modified="20200212173821877" tags="[[Animal farm]]" title="Keep on bleeding">
-<pre>
-[img[pictures/benataim-medamemim.jpg]]
+<pre>[img[pictures/benataim-medamemim.jpg]]
 
 
  &lt;&lt;heblink [[ובינתיים מדממים]]&gt;&gt;
@@ -8689,7 +8662,6 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </div>
 <div created="20200212164125847" modified="20200212165652184" tags="Metafiction [[Here in the Ghetto]]" title="Laundry">
 <pre>
-
 [img[pictures/kevisa.jpg]]
 
 
@@ -8766,8 +8738,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200212163427451" modified="20200212164322920" tags="[[Monkeys with car keys]] [[How many songs can you even invent at all]]" title="Outer sisters">
-<pre>
-[img[pictures/ahayot-huz.jpg]]
+<pre>[img[pictures/ahayot-huz.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Outer sisters]]&quot;&gt;&gt;
 
@@ -8796,8 +8767,7 @@ He did his best at raising us as good people, and in most cases he even succeede
  &lt;&lt;heblink [[אבא יואל]]&gt;&gt;</pre>
 </div>
 <div created="20200212172521280" modified="20200212172606177" tags="[[Coen sister]]" title="Philippe">
-<pre>
-[img[pictures/phillip.jpg]]
+<pre>[img[pictures/phillip.jpg]]
 
  &lt;&lt;heblink [[פיליפ]]&gt;&gt;
 </pre>
@@ -8845,8 +8815,18 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
  &lt;&lt;heblink [[הכחול כבר כאן]]&gt;&gt;</pre>
 </div>
-<div created="20200202171450477" modified="20200202171622841" tags="[[Monkeys with car keys]]" title="The first assembly">
+<div created="20200202171450477" modified="20200212175928821" tags="[[Monkeys with car keys]]" title="The first assembly">
 <pre>[img[pictures/asefot.jpg]]
+
+!!![[Philippe]]:
+
+Our first assembly was at the [[monometallic Christmas dinner|Christmas dinner]] that took place in December 2015, and since then we see each other all the time. The youngsters actually work together, and I come or show up to family's dinners and such.  
+A week ago (meaning more than a year after that Christmas dinner), it was the first time since then, that Yoyo asked us all to come, and everybody except [[Dandan who went|Dandan went]], came, including [[Iris|Iris the daughter]], the daughter of my beloved Eva. 
+Yoyo stood in front of everybody, and in his wobbly way he asked [[Fa]] to stand close to him and told us how few days ago he insulted Fa, who didn't understand completely the intentions of Yoyo, when they edited the first chapter of his internet porn series.  
+&quot;It happened five days ago, that [[I hurt|Keep on bleeding]] Fa, and I couldn't let it go since. I'm really ashamed because I yelled at him and I was not very nice. On the other hand I'm just a human being, and in the end of the day I've called you here to tell you that all of us are in pain and all of us cause pain, and except for the cool things here in the archive, I think that if we really want to make a difference, we have to tell [[the real stories|True stories]] as they are, and there's nothing to be ashamed of, not even of Gura's rage seizures, and I ask you to write – not in an emotional way- but in an [[imagine|Imagine]] way.
+When he said it I thought about my Ethan, my youngest son, and how complicated are the relations between us, I, the psychiatrist, am [[walking barefoot|I, the psychiatrist]]. 
+
+
 
  &lt;&lt;heblink [[האסיפה הראשונה]]&gt;&gt;
 
@@ -8910,8 +8890,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 </pre>
 </div>
 <div created="20200212165433684" modified="20200212173657434" tags="TV" title="TV Series">
-<pre>
-[img[pictures/sdarot.jpg]]
+<pre>[img[pictures/sdarot.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[TV series]]&quot;&gt;&gt;
 
