--- a/english.html
+++ b/english.html
@@ -8210,7 +8210,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Ayala Malach Pines]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8414,7 +8414,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20191113130654313" modified="20200212160039196" tags="[[Outer sisters]]" title="Ayala Malach Pines">
+<div created="20191113130654313" modified="20200212181621602" tags="[[Outer sisters]]" title="Ayala Malach Pines">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
 
 !!![[Yoyo]]:
@@ -8601,7 +8601,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 </pre>
 </div>
-<div created="20200212175008520" modified="20200212175438288" tags="[[True stories]] Children" title="I, the psychiatrist">
+<div created="20200212175008520" modified="20200212181018890" tags="[[True stories]] Children" title="I, the psychiatrist">
 <pre>[img[pictures/eytan-sheli.jpg]]
 
 
@@ -8653,16 +8653,15 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212173527645" modified="20200212173821877" tags="[[Animal farm]]" title="Keep on bleeding">
+<div created="20200212173527645" modified="20200212181007023" tags="[[Animal farm]]" title="Keep on bleeding">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
- &lt;&lt;heblink [[ובינתיים מדממים]]&gt;&gt;
+ &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
 <div created="20200212164125847" modified="20200212165652184" tags="Metafiction [[Here in the Ghetto]]" title="Laundry">
-<pre>
-[img[pictures/kevisa.jpg]]
+<pre>[img[pictures/kevisa.jpg]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[Laundry]]&quot;&gt;&gt;
@@ -8889,7 +8888,7 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 </pre>
 </div>
-<div created="20200212165433684" modified="20200212173657434" tags="TV" title="TV Series">
+<div created="20200212165433684" modified="20200212181040088" tags="TV" title="TV Series">
 <pre>[img[pictures/sdarot.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[TV series]]&quot;&gt;&gt;
