--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האסיפה הראשונה]] [[אני הפסיכיאטר]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200212171323096" title="$:/temp/search">
+<div created="20161023184814872" modified="20200212181844687" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10149,7 +10149,7 @@ well,
 
 </pre>
 </div>
-<div created="20170914175036224" modified="20200212155905500" tags="[[אחיות חוץ]]" title="איילה מלאך פיינס">
+<div created="20170914175036224" modified="20200212181804062" tags="[[אחיות חוץ]]" title="איילה מלאך פיינס">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
 
 !!![[יויו]]:
@@ -10160,7 +10160,7 @@ well,
 
 בהשראתה נולדה [[נשמה]]. יהי זיכרה ברוך.
 
-&lt;&lt;englink [[ayala malach pines]]&gt;&gt;
+&lt;&lt;englink [[Ayala Malach Pines]]&gt;&gt;
 
 </pre>
 </div>
@@ -15509,7 +15509,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170711173812724" modified="20200212171627118" tags="טלוויזיה" title="סדרות">
+<div created="20170711173812724" modified="20200212182039827" tags="טלוויזיה" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
@@ -15627,7 +15627,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170504194900461" modified="20200212162016372" tags="[[מטא בדיון]]" title="סיפורים אמיתיים">
+<div created="20170504194900461" modified="20200212181846786" tags="[[מטא בדיון]]" title="סיפורים אמיתיים">
 <pre>[img[pictures/sipurim-amitiim.jpg]]
 
 !!![[פיליפ]]:
@@ -15639,7 +15639,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-&lt;&lt;list-links filter:&quot;[tag[סיפורים אמיתיים]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[סיפורים אמיתיים]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [[True stories]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170507202822300" modified="20180704184451510" tags="[[סיפורים אמיתיים]] בתים" title="סיפורים שסיפרתי לנורמה">
 <pre>[img[pictures/sipoorim-lenorma.jpg]]
