--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="סדרות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15509,7 +15509,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170711173812724" modified="20200212182039827" tags="טלוויזיה" title="סדרות">
+<div created="20170711173812724" modified="20200212182510966" tags="טלוויזיה" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
@@ -15519,7 +15519,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[סדרות]]&quot;&gt;&gt;
 
-&lt;&lt;englink [[TV series]]&gt;&gt;
+&lt;&lt;englink [[TV Series]]&gt;&gt;
+
+
 
 
 
@@ -15627,7 +15629,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170504194900461" modified="20200212181846786" tags="[[מטא בדיון]]" title="סיפורים אמיתיים">
+<div created="20170504194900461" modified="20200212182404581" tags="[[מטא בדיון]]" title="סיפורים אמיתיים">
 <pre>[img[pictures/sipurim-amitiim.jpg]]
 
 !!![[פיליפ]]:
