--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="סדרות [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200212181844687" title="$:/temp/search">
+<div created="20161023184814872" modified="20200212184644237" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10610,7 +10610,7 @@ well,
 
 דןדן</pre>
 </div>
-<div created="20200207101406305" modified="20200212163820908" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="בדרך לאן שהוא">
+<div created="20200207101406305" modified="20200212184641238" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="בדרך לאן שהוא">
 <pre>[img[pictures/baderech-lean.jpg]]
 
 !!![[יויו]]:
@@ -11608,7 +11608,7 @@ Is where I want to be
 
 צריך מסמך? צריך לשלוח פקס? צריך כרטיסי ביקור? צריך לסרוק? צריך עיפרון? בדרך  לכל מקום  עוצרים [[בגלסי|http://www.galsi.co.il/]].</pre>
 </div>
-<div created="20200208124810859" modified="20200209165231867" tags="[[בדרך לאן שהוא]] בתים כביסה [[מטא בדיון]]" title="גם אני מחנה">
+<div created="20200208124810859" modified="20200212184700222" tags="[[בדרך לאן שהוא]] בתים כביסה [[מטא בדיון]]" title="גם אני מחנה">
 <pre>[img[pictures/gam-ani-machane.jpg]]
 
 !!![[יויו]]:
@@ -13961,14 +13961,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מאחורי העציצים, הקיר והחלונות הנאים למראה האלה, שברחוב ביל&quot;ו 29 פינת כרמיה 15, בשקט ובענווה שוכנת [[&quot;ככל הנראה&quot;|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b78bb3c3de1:0xbce6de6b0ed80951!3m1!7e115!4shttps://lh5.googleusercontent.com/p/AF1QipPHn_r-3sxsjpJKXwkGj4tzzEmsBMFayxYy7bJm%3Dw284-h160-k-no!5z15vXm9ecINeU16DXqNeQ15Qg15HXmdec15UgLSBHb29nbGUgU2VhcmNo&amp;imagekey=!1e10!2sAF1QipPHn_r-3sxsjpJKXwkGj4tzzEmsBMFayxYy7bJm&amp;sa=X&amp;ved=2ahUKEwigqdac7cjlAhXE6aQKHdEXDoUQoiowCnoECA8QBg]] - המספרה החביבה עלי, ובתוכה מני הנפלא והבנות שאיתו - וזה בילוי בפני עצמו.</pre>
 </div>
-<div created="20200130155540635" modified="20200208130020175" tags="[[חיות אוכל]] בתים ילדים מטבחים [[משפחת באומן]] [[בדרך לאן שהוא]]" title="כלים בכיור">
+<div created="20200130155540635" modified="20200212184720513" tags="[[חיות אוכל]] בתים ילדים מטבחים [[משפחת באומן]] [[בדרך לאן שהוא]]" title="כלים בכיור">
 <pre>[img[pictures/kelim-bakiyor.jpg]]
 
 !!![[גורה]]:
 
 [[אימא שלי|דינה ז&quot;ל]] לא יכלה לסבול כלים בכיור, וגם אני לא יכולה לסבול כלים בכיור, אלא אם הם נקיים מלכלוך שמביא חרקים ומחלות ומלאים במים וסבון. למזלי גם [[יויו]] ירש מאימא את [[המחלה|יסודי או ocd]], [[ואירי|אירי]] היא בכלל מחלה מהלכת. אז זו פינה סגורה [[בדירה|כוכב המשאלות 01]].</pre>
 </div>
-<div created="20200212140900112" modified="20200212144906754" tags="מוזיקה חבר [[בדרך לאן שהוא]]" title="כמה שירים כבר אפשר להמציא בכלל">
+<div created="20200212140900112" modified="20200212184626381" tags="מוזיקה חבר [[בדרך לאן שהוא]]" title="כמה שירים כבר אפשר להמציא בכלל">
 <pre>[img[pictures/kama-shirim.jpg]]
 
 !!![[יויו]]:
@@ -15049,12 +15049,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200212173930038" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
-<pre>[img[pictures/benataim-medamemim.jpg]]
+<div created="20170527145749109" modified="20200212184929207" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<pre>
+[img[pictures/benataim-medamemim.jpg]]
+
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, אנחנו מצדנו
 [[נמשיך לדמם|https://www.youtube.com/watch?v=cYhDSo9pgxg]], תחתים ובטנים,
 ימשיכו לשעמם. 
+
+
 
 &lt;&lt;englink [[Keep on bleeding]]&gt;&gt;
 
@@ -15821,7 +15825,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בשליש השלישי של אוגוסט 2019, מחכה למונית שתיקח אותי לתחנת רכבת נתניה, אחרי ביקור אצל רופא השיניים שבכפר.</pre>
 </div>
-<div created="20200207164959548" modified="20200209165453560" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] בתים מטבחים מתכונים [[מתכונים טבעוניים]]" title="עגבניות בתנור">
+<div created="20200207164959548" modified="20200212184741740" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] בתים מטבחים מתכונים [[מתכונים טבעוניים]]" title="עגבניות בתנור">
 <pre>[img[pictures/agvanyot-batanoor.jpg]]
 
 !!![[יויו]]:
@@ -17351,7 +17355,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20200207191703835" modified="20200209165143573" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] מטבחים מתכונים [[מתכונים טבעוניים]]" title="קודם כל כרישה ומנגולד">
+<div created="20200207191703835" modified="20200212184731970" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] מטבחים מתכונים [[מתכונים טבעוניים]]" title="קודם כל כרישה ומנגולד">
 <pre>[img[pictures/kresha-ve-mangold.jpg]]
 
 !!![[יויו]]:
