--- a/english.html
+++ b/english.html
@@ -8201,7 +8201,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200212155836780" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200212185601507" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8210,7 +8210,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Ayala Malach Pines]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8610,10 +8610,10 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 </pre>
 </div>
-<div created="20200212174127022" modified="20200212174834891" tags="Music [[How many songs can you even invent at all]]" title="Imagine">
+<div created="20200212174127022" modified="20200212185553104" tags="Music [[How many songs can you even invent at all]]" title="Imagine">
 <pre>[img[pictures/imagine.jpg]]
 
-!!![[Coen sisters]]:
+!!![[Coen Sisters]]:
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=L6svOHFSAH8]]
 
