--- a/index.html
+++ b/index.html
@@ -15050,8 +15050,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20170527145749109" modified="20200212184929207" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
-<pre>
-[img[pictures/benataim-medamemim.jpg]]
+<pre>[img[pictures/benataim-medamemim.jpg]]
 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, אנחנו מצדנו
