--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כמה שירים כבר אפשר להמציא בכלל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13968,7 +13968,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[אימא שלי|דינה ז&quot;ל]] לא יכלה לסבול כלים בכיור, וגם אני לא יכולה לסבול כלים בכיור, אלא אם הם נקיים מלכלוך שמביא חרקים ומחלות ומלאים במים וסבון. למזלי גם [[יויו]] ירש מאימא את [[המחלה|יסודי או ocd]], [[ואירי|אירי]] היא בכלל מחלה מהלכת. אז זו פינה סגורה [[בדירה|כוכב המשאלות 01]].</pre>
 </div>
-<div created="20200212140900112" modified="20200212195227332" tags="מוזיקה חבר [[בדרך לאן שהוא]]" title="כמה שירים כבר אפשר להמציא בכלל">
+<div created="20200212140900112" modified="20200212195601948" tags="מוזיקה חבר [[בדרך לאן שהוא]]" title="כמה שירים כבר אפשר להמציא בכלל">
 <pre>[img[pictures/kama-shirim.jpg]]
 
 !!![[יויו]]:
@@ -13986,13 +13986,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[(מילים ולחן: מתי כספי)|https://www.youtube.com/watch?v=Ya4Cago3vVY]]
 
 
-&lt;&lt;englink [[How many songs can you even invent at all]]&gt;&gt;
 
 
 &lt;&lt;list-links filter:&quot;[tag[כמה שירים כבר אפשר להמציא בכלל]]&quot;&gt;&gt;
 
 
-</pre>
+&lt;&lt;englink [[How many songs can you even invent at all]]&gt;&gt;</pre>
 </div>
 <div created="20180416185136170" modified="20180605131548272" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="כמולונז">
 <pre>[img[pictures/cmolonez.jpg]]
