--- a/english.html
+++ b/english.html
@@ -251,6 +251,8 @@ Error message and password prompt
 
 <li>9-side-wishing-star</li>
 
+<li>A friend</li>
+
 <li>A politician</li>
 
 <li>Alan Ball</li>
@@ -8212,7 +8214,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[A friend]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8393,6 +8395,17 @@ coming soon as possible
 
 
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
+</div>
+<div created="20200212200933944" modified="20200212201134793" tags="Films" title="A friend">
+<pre>
+[img[pictures/friend.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[A friend]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[חבר]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200202185308186" modified="20200202185632492" title="A politician">
 <pre>[img[pictures/politician.jpg]]
@@ -8603,8 +8616,9 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 </pre>
 </div>
-<div created="20200212191618559" modified="20200212191953525" tags="[[A friend]] Music [[On the road to somewhere]]" title="How many songs can you even invent at all">
+<div created="20200212191618559" modified="20200212201056965" tags="[[A friend]] Music [[On the road to somewhere]]" title="How many songs can you even invent at all">
 <pre>[img[pictures/kama-shirim.jpg]]
+
 
 
 &lt;&lt;list-links filter:&quot;[tag[How many songs can you even invent at all]]&quot;&gt;&gt;
