--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="חבר [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200212184644237" title="$:/temp/search">
+<div created="20161023184814872" modified="20200212201449354" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12777,7 +12777,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
 <pre>[img[pictures/chavlaz.jpg]]</pre>
 </div>
-<div created="20180814103316187" modified="20190329114932619" tags="סרטים" title="חבר">
+<div created="20180814103316187" modified="20200212201446463" tags="סרטים" title="חבר">
 <pre>[img[pictures/friend.jpg]]
 
 
@@ -12792,7 +12792,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 (את הציור גורה ציירה מתוך [[תמונה|https://3.bp.blogspot.com/-ofciR9wlEuQ/WqsF9UH5O2I/AAAAAAAAr4w/ZUUJCbtouXcVXwE3IR9xUPk_qWSdjKZmwCEwYBhgL/s1600/career%2Bgirls00002.png]] מהסרט הנהדר [[ילדות קריירה|https://www.imdb.com/title/tt0118818/]] של האחות [[מייק לי]]).
 
 
-&lt;&lt;list-links filter:&quot;[tag[חבר]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[חבר]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[A friend]]&gt;&gt;</pre>
 </div>
 <div created="20180328131528706" modified="20200212143907557" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חוה אלברשטיין">
 <pre>[img[pictures/chava-alberstein.jpg]]
@@ -15052,7 +15054,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200212195138966" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200212201428376" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
@@ -15827,7 +15829,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בשליש השלישי של אוגוסט 2019, מחכה למונית שתיקח אותי לתחנת רכבת נתניה, אחרי ביקור אצל רופא השיניים שבכפר.</pre>
 </div>
-<div created="20200207164959548" modified="20200212184741740" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] בתים מטבחים מתכונים [[מתכונים טבעוניים]]" title="עגבניות בתנור">
+<div created="20200207164959548" modified="20200212201329063" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] בתים מטבחים מתכונים [[מתכונים טבעוניים]]" title="עגבניות בתנור">
 <pre>[img[pictures/agvanyot-batanoor.jpg]]
 
 !!![[יויו]]:
