--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כמה שירים כבר אפשר להמציא בכלל]] [[בדרך לאן שהוא]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="חבר [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12777,7 +12777,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
 <pre>[img[pictures/chavlaz.jpg]]</pre>
 </div>
-<div created="20180814103316187" modified="20190329114932619" tags="סרטים" title="חבר">
+<div created="20180814103316187" modified="20200212201246646" tags="סרטים" title="חבר">
 <pre>[img[pictures/friend.jpg]]
 
 
@@ -12792,7 +12792,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 (את הציור גורה ציירה מתוך [[תמונה|https://3.bp.blogspot.com/-ofciR9wlEuQ/WqsF9UH5O2I/AAAAAAAAr4w/ZUUJCbtouXcVXwE3IR9xUPk_qWSdjKZmwCEwYBhgL/s1600/career%2Bgirls00002.png]] מהסרט הנהדר [[ילדות קריירה|https://www.imdb.com/title/tt0118818/]] של האחות [[מייק לי]]).
 
 
-&lt;&lt;list-links filter:&quot;[tag[חבר]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[חבר]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [[A friend]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20180328131528706" modified="20200212143907557" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חוה אלברשטיין">
 <pre>[img[pictures/chava-alberstein.jpg]]
@@ -13968,7 +13973,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[אימא שלי|דינה ז&quot;ל]] לא יכלה לסבול כלים בכיור, וגם אני לא יכולה לסבול כלים בכיור, אלא אם הם נקיים מלכלוך שמביא חרקים ומחלות ומלאים במים וסבון. למזלי גם [[יויו]] ירש מאימא את [[המחלה|יסודי או ocd]], [[ואירי|אירי]] היא בכלל מחלה מהלכת. אז זו פינה סגורה [[בדירה|כוכב המשאלות 01]].</pre>
 </div>
-<div created="20200212140900112" modified="20200212192029286" tags="מוזיקה חבר [[בדרך לאן שהוא]]" title="כמה שירים כבר אפשר להמציא בכלל">
+<div created="20200212140900112" modified="20200212201213299" tags="מוזיקה חבר [[בדרך לאן שהוא]]" title="כמה שירים כבר אפשר להמציא בכלל">
 <pre>[img[pictures/kama-shirim.jpg]]
 
 !!![[יויו]]:
@@ -13986,16 +13991,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[(מילים ולחן: מתי כספי)|https://www.youtube.com/watch?v=Ya4Cago3vVY]]
 
 
+
+
 &lt;&lt;list-links filter:&quot;[tag[כמה שירים כבר אפשר להמציא בכלל]]&quot;&gt;&gt;
 
 
-
-&lt;&lt;englink [[How many songs can you even invent at all]]&gt;&gt;
-
-
-
-
-</pre>
+&lt;&lt;englink [[How many songs can you even invent at all]]&gt;&gt;</pre>
 </div>
 <div created="20180416185136170" modified="20180605131548272" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="כמולונז">
 <pre>[img[pictures/cmolonez.jpg]]
@@ -15056,7 +15057,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200212191914030" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200212195138966" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
