--- a/english.html
+++ b/english.html
@@ -317,6 +317,8 @@ Error message and password prompt
 
 <li>Monkeys with car keys</li>
 
+<li>Music</li>
+
 <li>On the road to somewhere</li>
 
 <li>Outer sisters</li>
@@ -8214,7 +8216,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[A friend]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[How many songs can you even invent at all]] Music [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8616,7 +8618,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 </pre>
 </div>
-<div created="20200212191618559" modified="20200212201056965" tags="[[A friend]] Music [[On the road to somewhere]]" title="How many songs can you even invent at all">
+<div created="20200212191618559" modified="20200212201808243" tags="[[A friend]] Music [[On the road to somewhere]]" title="How many songs can you even invent at all">
 <pre>[img[pictures/kama-shirim.jpg]]
 
 
@@ -8748,6 +8750,17 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[קופים ממונעים]]&gt;&gt;
 
 
+
+</pre>
+</div>
+<div created="20200212201643628" modified="20200212201837484" tags="[[How many songs can you even invent at all]]" title="Music">
+<pre>
+[img[pictures/music.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
+
+
+ &lt;&lt;heblink [[מוזיקה]]&gt;&gt;
 
 </pre>
 </div>
