--- a/english.html
+++ b/english.html
@@ -8216,7 +8216,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[How many songs can you even invent at all]] Music [[Coen Sisters]]" title="$:/StoryList">
+<div list="Music [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8753,7 +8753,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200212201837484" tags="[[How many songs can you even invent at all]]" title="Music">
+<div created="20200212201643628" modified="20200212202501397" tags="[[How many songs can you even invent at all]]" title="Music">
 <pre>
 [img[pictures/music.jpg]]
 
