--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="חבר [[האחיות כהן]]" title="$:/StoryList">
+<div list="מוזיקה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200212184644237" title="$:/temp/search">
+<div created="20161023184814872" modified="20200212201626643" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12777,7 +12777,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
 <pre>[img[pictures/chavlaz.jpg]]</pre>
 </div>
-<div created="20180814103316187" modified="20200212201246646" tags="סרטים" title="חבר">
+<div created="20180814103316187" modified="20200212201446463" tags="סרטים" title="חבר">
 <pre>[img[pictures/friend.jpg]]
 
 
@@ -12794,10 +12794,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[חבר]]&quot;&gt;&gt;
 
-
-&lt;&lt;englink [[A friend]]&gt;&gt;
-
-</pre>
+&lt;&lt;englink [[A friend]]&gt;&gt;</pre>
 </div>
 <div created="20180328131528706" modified="20200212143907557" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חוה אלברשטיין">
 <pre>[img[pictures/chava-alberstein.jpg]]
@@ -13973,7 +13970,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[אימא שלי|דינה ז&quot;ל]] לא יכלה לסבול כלים בכיור, וגם אני לא יכולה לסבול כלים בכיור, אלא אם הם נקיים מלכלוך שמביא חרקים ומחלות ומלאים במים וסבון. למזלי גם [[יויו]] ירש מאימא את [[המחלה|יסודי או ocd]], [[ואירי|אירי]] היא בכלל מחלה מהלכת. אז זו פינה סגורה [[בדירה|כוכב המשאלות 01]].</pre>
 </div>
-<div created="20200212140900112" modified="20200212201213299" tags="מוזיקה חבר [[בדרך לאן שהוא]]" title="כמה שירים כבר אפשר להמציא בכלל">
+<div created="20200212140900112" modified="20200212195601948" tags="מוזיקה חבר [[בדרך לאן שהוא]]" title="כמה שירים כבר אפשר להמציא בכלל">
 <pre>[img[pictures/kama-shirim.jpg]]
 
 !!![[יויו]]:
@@ -14871,7 +14868,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180205175902513" modified="20200212144233746" tags="[[כמה שירים כבר אפשר להמציא בכלל]]" title="מוזיקה">
+<div created="20180205175902513" modified="20200212202944623" tags="[[כמה שירים כבר אפשר להמציא בכלל]]" title="מוזיקה">
 <pre>[img[pictures/music.jpg]]
 
 !!![[אירי וגורה]]:
@@ -14881,6 +14878,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 &lt;&lt;list-links filter:&quot;[tag[מוזיקה]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [[Music]]&gt;&gt;
+
+
+
+
+
 
 
 
@@ -15057,7 +15062,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200212195138966" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200212201428376" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
@@ -15520,7 +15525,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170711173812724" modified="20200212182510966" tags="טלוויזיה" title="סדרות">
+<div created="20170711173812724" modified="20200212202602220" tags="טלוויזיה" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
@@ -15832,7 +15837,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בשליש השלישי של אוגוסט 2019, מחכה למונית שתיקח אותי לתחנת רכבת נתניה, אחרי ביקור אצל רופא השיניים שבכפר.</pre>
 </div>
-<div created="20200207164959548" modified="20200212184741740" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] בתים מטבחים מתכונים [[מתכונים טבעוניים]]" title="עגבניות בתנור">
+<div created="20200207164959548" modified="20200212201329063" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] בתים מטבחים מתכונים [[מתכונים טבעוניים]]" title="עגבניות בתנור">
 <pre>[img[pictures/agvanyot-batanoor.jpg]]
 
 !!![[יויו]]:
