--- a/english.html
+++ b/english.html
@@ -307,6 +307,8 @@ Error message and password prompt
 
 <li>Laundry</li>
 
+<li>Lily 18 - Children</li>
+
 <li>logo-bg</li>
 
 <li>Love</li>
@@ -350,6 +352,8 @@ Error message and password prompt
 <li>Tomer</li>
 
 <li>True stories</li>
+
+<li>TV</li>
 
 <li>TV Series</li>
 
@@ -8216,7 +8220,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Music [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8699,6 +8703,18 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 </pre>
 </div>
+<div created="20200212205329430" modified="20200212210209984" tags="Mothers [[Single parent children]] [[Dandan went]] Lily" title="Lily 18 - Children">
+<pre>
+[img[pictures/yeladim.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Children]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[לילי 18 - ילדים]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
@@ -8926,7 +8942,15 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 </pre>
 </div>
-<div created="20200212165433684" modified="20200212181040088" tags="TV" title="TV Series">
+<div created="20200212204228178" modified="20200212204440759" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]]" title="TV">
+<pre>
+[img[pictures/television.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[TV]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[טלוויזיה]]&gt;&gt;</pre>
+</div>
+<div created="20200212165433684" modified="20200212210110029" tags="TV" title="TV Series">
 <pre>[img[pictures/sdarot.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[TV series]]&quot;&gt;&gt;
