--- a/english.html
+++ b/english.html
@@ -271,6 +271,8 @@ Error message and password prompt
 
 <li>Dandan went</li>
 
+<li>Draft of 'Lily 18 - Children'</li>
+
 <li>Dreams that we've dreamt</li>
 
 <li>Elementary</li>
@@ -318,6 +320,8 @@ Error message and password prompt
 <li>Metafiction</li>
 
 <li>Monkeys with car keys</li>
+
+<li>Mothers</li>
 
 <li>Music</li>
 
@@ -8220,7 +8224,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Draft of 'Lily 18 - Children']] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8531,6 +8535,18 @@ Be good.
 
 </pre>
 </div>
+<div created="20200212205329430" draft.of="Lily 18 - Children" draft.title="Lily 18 - Children" modified="20200212210755258" tags="Mothers [[Single parent children]] [[Dandan went]] Lily" title="Draft of 'Lily 18 - Children'">
+<pre>
+[img[pictures/yeladim.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Children]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[לילי 18 - ילדים]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
@@ -8764,6 +8780,18 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 
  &lt;&lt;heblink [[קופים ממונעים]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200212210738091" modified="20200212210928815" tags="[[Monkeys with car keys]] [[The team]]" title="Mothers">
+<pre>
+[img[pictures/imahot.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Mothers]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[אימהות]]&gt;&gt;
 
 
 
