--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="טלוויזיה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14564,7 +14564,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [img[pictures/lily-17-1.jpg]]
 </pre>
 </div>
-<div created="20190219160737038" modified="20200212211349805" tags="אימהות [[דןדן נסע]] [[ילדים חד הוריים]] לילי" title="לילי 18 - ילדים">
+<div created="20190219160737038" modified="20200212212946699" tags="אימהות [[דןדן נסע]] [[ילדים חד הוריים]] לילי" title="לילי 18 - ילדים">
 <pre>[img[pictures/yeladim.jpg]]
 
 !!![[לילי]]:
