--- a/english.html
+++ b/english.html
@@ -8222,7 +8222,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Mothers [[Lily 18 - Children]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8705,7 +8705,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 </pre>
 </div>
-<div created="20200212205329430" modified="20200212211721027" tags="Mothers [[Single parent children]] [[Dandan went]] Lily" title="Lily 18 - Children">
+<div created="20200212205329430" modified="20200212213103311" tags="Mothers [[Single parent children]] [[Dandan went]] Lily" title="Lily 18 - Children">
 <pre>
 [img[pictures/yeladim.jpg]]
 
@@ -8771,7 +8771,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 </pre>
 </div>
-<div created="20200212210738091" modified="20200212210928815" tags="[[Monkeys with car keys]] [[The team]]" title="Mothers">
+<div created="20200212210738091" modified="20200212212734875" tags="[[Monkeys with car keys]] [[The team]]" title="Mothers">
 <pre>
 [img[pictures/imahot.jpg]]
 
