--- a/english.html
+++ b/english.html
@@ -265,6 +265,8 @@ Error message and password prompt
 
 <li>Bjork</li>
 
+<li>Children</li>
+
 <li>Christmas dinner</li>
 
 <li>Coen Sisters</li>
@@ -306,8 +308,6 @@ Error message and password prompt
 <li>Keep on bleeding</li>
 
 <li>Laundry</li>
-
-<li>Lily 18 - Children</li>
 
 <li>logo-bg</li>
 
@@ -8222,7 +8222,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="Children [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8405,8 +8405,7 @@ coming soon as possible
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
 </div>
 <div created="20200212200933944" modified="20200212201134793" tags="Films" title="A friend">
-<pre>
-[img[pictures/friend.jpg]]
+<pre>[img[pictures/friend.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[A friend]]&quot;&gt;&gt;
 
@@ -8481,6 +8480,17 @@ Is where I want to be
 
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
+</div>
+<div created="20200212205329430" modified="20200212214202150" tags="Mothers [[Single parent children]] [[Dandan went]]" title="Children">
+<pre>[img[pictures/yeladim.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Children]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[ילדים]]&gt;&gt;
+
+
+
+</pre>
 </div>
 <div created="20200115162658453" modified="20200115163052944" tags="Meals [[Food addicts]]" title="Christmas dinner">
 <pre>[img[pictures/aruchat-christmas.jpg]]
@@ -8705,18 +8715,6 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 </pre>
 </div>
-<div created="20200212205329430" modified="20200212213103311" tags="Mothers [[Single parent children]] [[Dandan went]] Lily" title="Lily 18 - Children">
-<pre>
-[img[pictures/yeladim.jpg]]
-
-&lt;&lt;list-links filter:&quot;[tag[Children]]&quot;&gt;&gt;
-
- &lt;&lt;heblink [[לילי 18 - ילדים]]&gt;&gt;
-
-
-
-</pre>
-</div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
@@ -8772,8 +8770,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200212210738091" modified="20200212212734875" tags="[[Monkeys with car keys]] [[The team]]" title="Mothers">
-<pre>
-[img[pictures/imahot.jpg]]
+<pre>[img[pictures/imahot.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Mothers]]&quot;&gt;&gt;
 
@@ -8784,8 +8781,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200212201643628" modified="20200212202501397" tags="[[How many songs can you even invent at all]]" title="Music">
-<pre>
-[img[pictures/music.jpg]]
+<pre>[img[pictures/music.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
 
@@ -8957,8 +8953,7 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 </pre>
 </div>
 <div created="20200212204228178" modified="20200212204440759" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]]" title="TV">
-<pre>
-[img[pictures/television.jpg]]
+<pre>[img[pictures/television.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[TV]]&quot;&gt;&gt;
 
