--- a/english.html
+++ b/english.html
@@ -257,6 +257,8 @@ Error message and password prompt
 
 <li>Alan Ball</li>
 
+<li>Animal farm</li>
+
 <li>Ayala Malach Pines</li>
 
 <li>Berry Sakharof</li>
@@ -272,6 +274,8 @@ Error message and password prompt
 <li>Coen Sisters</li>
 
 <li>Dandan went</li>
+
+<li>Draft of 'Mothers'</li>
 
 <li>Dreams that we've dreamt</li>
 
@@ -8222,7 +8226,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Children [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Draft of 'Mothers']] [[Keep on bleeding]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8436,6 +8440,18 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
+<div created="20200212215510131" modified="20200212215758995" tags="[[Monkeys with car keys]] [[The team]]" title="Animal farm">
+<pre>
+[img[pictures/bechavat-hachayot.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Animal farm]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[בחוות החיות]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20191113130654313" modified="20200212181621602" tags="[[Outer sisters]]" title="Ayala Malach Pines">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
 
@@ -8538,6 +8554,17 @@ Be good.
 
 
  &lt;&lt;heblink [[דןדן נסע]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200212210738091" draft.of="Mothers" draft.title="Mothers" modified="20200212215627038" tags="[[Monkeys with car keys]] [[The team]]" title="Draft of 'Mothers'">
+<pre>[img[pictures/imahot.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Mothers]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[אימהות]]&gt;&gt;
 
 
 
