--- a/english.html
+++ b/english.html
@@ -275,8 +275,6 @@ Error message and password prompt
 
 <li>Dandan went</li>
 
-<li>Draft of 'Mothers'</li>
-
 <li>Dreams that we've dreamt</li>
 
 <li>Elementary</li>
@@ -8226,7 +8224,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Draft of 'Mothers']] [[Keep on bleeding]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Mothers [[Keep on bleeding]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8559,17 +8557,6 @@ Be good.
 
 </pre>
 </div>
-<div created="20200212210738091" draft.of="Mothers" draft.title="Mothers" modified="20200212215627038" tags="[[Monkeys with car keys]] [[The team]]" title="Draft of 'Mothers'">
-<pre>[img[pictures/imahot.jpg]]
-
-&lt;&lt;list-links filter:&quot;[tag[Mothers]]&quot;&gt;&gt;
-
- &lt;&lt;heblink [[אימהות]]&gt;&gt;
-
-
-
-</pre>
-</div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
@@ -8796,7 +8783,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 </pre>
 </div>
-<div created="20200212210738091" modified="20200212212734875" tags="[[Monkeys with car keys]] [[The team]]" title="Mothers">
+<div created="20200212210738091" modified="20200212220216313" tags="[[Monkeys with car keys]] [[The team]]" title="Mothers">
 <pre>[img[pictures/imahot.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Mothers]]&quot;&gt;&gt;
