--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אחות כהן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200212215452469" title="$:/temp/search">
+<div created="20161023184814872" modified="20200212220445167" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10099,12 +10099,14 @@ well,
 כל בית צריך אימא אוהבת, מקבלת ומסייעת, [[ובאחוזת דאונטון|https://www.imdb.com/title/tt1606375/?ref_=nv_sr_1]] הענקית שתי אימהות נהדרות. קורה, [[האימא המלאכית|https://www.imdb.com/name/nm0001527/?ref_=tt_cl_t9]] של מעלה, ורוז, [[האימא הכי בעולם|https://www.imdb.com/name/nm0517642/?ref_=ttfc_fc_cl_i8]] של מטה. הן שתיהן דואגות לסדר את הדברים שקורים בשום וטוב לב, כי דמויות רבות מתגוררות באחוזה ועוד רבות מגיעות לבקרה.
 מהתצלום [[הזה|http://d2buyft38glmwk.cloudfront.net/media/__sized/images/canonical/downton-abbey-s6-house-trivia-1920x1080-scale-800x600.jpg]] ציירתי את הציור, והדמות הצועדת בה היא [[הרוזנת האלמנה ויולט קרולי|https://www.imdb.com/name/nm0001749/?ref_=tt_cl_t12]], אחת הדמויות האדירות, למרות שהיא יצאה קצת יותר כמו [[איזבל קרולי|https://www.imdb.com/name/nm0934362/?ref_=ttfc_fc_cl_t13]], דמות נפלאה גם כן. אבל מה עם [[דייזי|https://www.imdb.com/name/nm2904789/?ref_=ttfc_fc_cl_t10]] ההולכת ופורחת, [[מיסטר מוזלי|https://www.imdb.com/name/nm0236413/?ref_=ttfc_fc_cl_t14]] הנפלא, [[גברת פטמור|https://www.imdb.com/name/nm0630149/?ref_=ttfc_fc_cl_t11]] הבובה, [[ברנסון|https://www.imdb.com/name/nm1395602/?ref_=ttfc_fc_cl_t15]] המענטש, [[ליידי מרי|https://www.imdb.com/name/nm1890784/?ref_=ttfc_fc_cl_t5]] שיכולה להיות כלבתא אך גם חברה טובה, [[ליידי אדית'|https://www.imdb.com/name/nm3882295/?ref_=ttfc_fc_cl_t2]] מלאת האהבה והכעסים, [[האבא|https://www.imdb.com/name/nm0095017/?ref_=tt_cl_t1]] של מעלה השמרן המתגמש, [[האבא|https://www.imdb.com/name/nm0141697/?ref_=ttfc_fc_cl_t3]] של מטה שאט מתרכך מעט, [[בייט'ס|https://www.imdb.com/name/nm0185354/?ref_=ttfc_fc_cl_t4]] הגבר, [[אנה|https://www.imdb.com/name/nm0296219/?ref_=ttfc_fc_cl_t6]] האישה, [[תומאס|https://www.imdb.com/name/nm1674947/?ref_=tt_cl_t7]] שהיה רשע ולמד בדרך הקשה. קשה לי להפסיק כי שימת הלב לדקויות הנפש האנושית והתפתחותה של המשפחה המאושרת בדרכה היא סוף כל הסופים שמשוחק מוש. מחיאות כפיים סוערות.</pre>
 </div>
-<div created="20170423214419764" modified="20190219161549970" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]] חבר ילדים" title="אחות כהן">
+<div created="20170423214419764" modified="20200212221132599" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]] חבר ילדים" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
 
 [[שלום ואהבה|imagine]].
 
-&lt;&lt;list-links filter:&quot;[tag[אחות כהן]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[אחות כהן]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[I would like to apologize]]&gt;&gt;</pre>
 </div>
 <div created="20170415105721479" modified="20200212164507265" tags="[[קופים ממונעים]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="אחיות חוץ">
 <pre>[img[pictures/ahayot-huz.jpg]]
@@ -10636,7 +10638,7 @@ well,
 
 בשבוע שעבר הלכתי להיפגש עם חבר [[בשרונה|http://www.saronatlv.co.il/]], ובמעבר [[מרחוב הארבעה|https://he.wikipedia.org/wiki/%D7%A8%D7%97%D7%95%D7%91_%D7%94%D7%90%D7%A8%D7%91%D7%A2%D7%94]] זה מה שראיתי (הבניינים באמצע הם [[המערכת ז&quot;ל|מערכת תל אביב]]).</pre>
 </div>
-<div created="20170425194155286" modified="20200212215914775" tags="[[קופים ממונעים]] הצוות" title="בחוות החיות">
+<div created="20170425194155286" modified="20200212221051148" tags="[[קופים ממונעים]] הצוות" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
