--- a/english.html
+++ b/english.html
@@ -277,6 +277,8 @@ Error message and password prompt
 
 <li>Dandan went</li>
 
+<li>Draft of 'Coen sister'</li>
+
 <li>Dreams that we've dreamt</li>
 
 <li>Elementary</li>
@@ -298,6 +300,8 @@ Error message and password prompt
 <li>HH</li>
 
 <li>How many songs can you even invent at all</li>
+
+<li>I would like to apologize</li>
 
 <li>I, the psychiatrist</li>
 
@@ -8226,7 +8230,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen sister]] Mothers [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Draft of 'Coen sister']] [[I would like to apologize]] Mothers [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8569,6 +8573,16 @@ Be good.
 
 </pre>
 </div>
+<div created="20200212220505011" draft.of="Coen sister" draft.title="Coen sister" modified="20200212221344375" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Draft of 'Coen sister'">
+<pre>
+[img[pictures/achot-coen.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Coen sister]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[אחות כהן]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
@@ -8668,6 +8682,15 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 &lt;&lt;list-links filter:&quot;[tag[How many songs can you even invent at all]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[כמה שירים כבר אפשר להמציא בכלל]]&gt;&gt;
+</pre>
+</div>
+<div created="20200212221326501" modified="20200212221745764" tags="[[On the road to somewhere]] [[True stories]] [[How many songs can you even invent at all]]" title="I would like to apologize">
+<pre>[img[pictures/ani-roza.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[I would like to apologize]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[אני רוצה להתנצל]]&gt;&gt;
 </pre>
 </div>
 <div created="20200212175008520" modified="20200212181018890" tags="[[True stories]] Children" title="I, the psychiatrist">
