--- a/english.html
+++ b/english.html
@@ -277,8 +277,6 @@ Error message and password prompt
 
 <li>Dandan went</li>
 
-<li>Draft of 'Coen sister'</li>
-
 <li>Dreams that we've dreamt</li>
 
 <li>Elementary</li>
@@ -8230,7 +8228,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Draft of 'Coen sister']] [[I would like to apologize]] Mothers [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen sister]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8520,7 +8518,7 @@ coming soon as possible
 
  &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
 </div>
-<div created="20200212220505011" modified="20200212221024855" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
+<div created="20200212220505011" modified="20200212222025177" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
 <pre>
 [img[pictures/achot-coen.jpg]]
 
@@ -8570,16 +8568,6 @@ Be good.
  &lt;&lt;heblink [[דןדן נסע]]&gt;&gt;
 
 
-
-</pre>
-</div>
-<div created="20200212220505011" draft.of="Coen sister" draft.title="Coen sister" modified="20200212221344375" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Draft of 'Coen sister'">
-<pre>
-[img[pictures/achot-coen.jpg]]
-
-&lt;&lt;list-links filter:&quot;[tag[Coen sister]]&quot;&gt;&gt;
-
- &lt;&lt;heblink [[אחות כהן]]&gt;&gt;
 
 </pre>
 </div>
